--- a/manuscript/introduction.qmd
+++ b/manuscript/introduction.qmd
@@ -1,11 +1,11 @@
 ## Introduction  
 
-High-accuracy benchmark sets have been a cornerstone of the Genome in a Bottle (GIAB) Consortium since 2014, enabling objective evaluation and rapid improvement of sequencing technologies, alignment strategies and variant-calling pipelines. Successive releases—from the pilot NA12878 v2 small-variant benchmark through the current HG002 v4.2.1 and the companion v0.6 structural-variant (SV) benchmark—have driven community-wide gains in F1 scores that now approach 0.999 in the easiest regions of the genome [1]. Yet these “high-confidence” resources remain fundamentally limited by their reliance on short-read mapping to a single linear reference: ∼10–15 % of the human genome, including most centromeres, segmental duplications (SDs), large tandem repeats and complex immune loci, is omitted because reads cannot be uniquely aligned or variants cannot be represented unambiguously in the VCF format [1,4]. As a result, benchmarking today provides little guidance on method performance in precisely the regions that are most polymorphic, medically relevant and challenging to analyse.
+High-accuracy benchmark sets have been a cornerstone of the Genome in a Bottle (GIAB) Consortium since 2014, enabling objective evaluation and rapid improvement of sequencing technologies, alignment strategies and variant-calling pipelines. Successive releases—from the pilot NA12878 v2 small-variant benchmark through the current HG002 v4.2.1 and the companion v0.6 structural-variant (SV) benchmark—have driven community-wide gains in F1 scores that now approach 0.999 in the easiest regions of the genome [@zook2019]. Yet these “high-confidence” resources remain fundamentally limited by their reliance on short-read mapping to a single linear reference: ∼10–15 % of the human genome, including most centromeres, segmental duplications (SDs), large tandem repeats and complex immune loci, is omitted because reads cannot be uniquely aligned or variants cannot be represented unambiguously in the VCF format [@zook2019; @krusche2019]. As a result, benchmarking today provides little guidance on method performance in precisely the regions that are most polymorphic, medically relevant and challenging to analyse.
 
-Recent technological advances now make it possible to transcend these constraints. Highly accurate long reads from Pacific Biosciences (HiFi; Q > 30) and ultra-long reads from Oxford Nanopore Technologies routinely produce assemblies exceeding Q70 consensus accuracy, while algorithmic breakthroughs such as Verkko and hifiasm enable phasing and telomere-to-telomere (T2T) completion of both haplotypes. The T2T Consortium’s CHM13 assembly showcased the feasibility of seamless human reference genomes, revealing eight per cent of sequence missing from GRCh38 and exposing pervasive reference bias in variant discovery. Building on these developments, a community effort has generated a nearly error-free, fully phased diploid assembly of the GIAB sample HG002—nicknamed “Q100” to reflect its aspirational base-level quality (QV = 100) [3]. Version 1.1 of the Q100 assembly spans both sex chromosomes, resolves all centromeres except residual rDNA gaps and attains Merqury quality estimates above Q78, providing an unprecedented substrate for benchmarking [3].
+Recent technological advances now make it possible to transcend these constraints. Highly accurate long reads from Pacific Biosciences (HiFi; Q > 30) and ultra-long reads from Oxford Nanopore Technologies routinely produce assemblies exceeding Q70 consensus accuracy, while algorithmic breakthroughs such as Verkko and hifiasm enable phasing and telomere-to-telomere (T2T) completion of both haplotypes. The T2T Consortium’s CHM13 assembly showcased the feasibility of seamless human reference genomes, revealing eight per cent of sequence missing from GRCh38 and exposing pervasive reference bias in variant discovery. Building on these developments, a community effort has generated a nearly error-free, fully phased diploid assembly of the GIAB sample HG002—nicknamed “Q100” to reflect its aspirational base-level quality (QV = 100) [@english2025]. Version 1.1 of the Q100 assembly spans both sex chromosomes, resolves all centromeres except residual rDNA gaps and attains Merqury quality estimates above Q78, providing an unprecedented substrate for benchmarking [@english2025].
 
-Leveraging this resource, we introduce the first whole-genome, assembly-based small- and structural-variant benchmark: the GIAB HG002 Q100 benchmark set (draft release `defrabbV0.019-20241113`). Instead of integrating variant callsets derived from read mapping, we align each Q100 haplotype directly to multiple reference genomes (GRCh37, GRCh38 and T2T-CHM13) and call variants with dipcall and PAV. The resulting truth calls are processed by DeFrABB—a transparent Snakemake workflow that iteratively masks assembly breaks, filters problematic repeat contexts, merges small and SV representations and produces harmonised VCF + BED packages for each reference [2]. This strategy allows confident characterisation of regions previously excluded by design, including long SDs with copy-number polymorphism, gene conversions in the MHC, and tandem repeats exceeding 10 kb [1,4].
+Leveraging this resource, we introduce the first whole-genome, assembly-based small- and structural-variant benchmark: the GIAB HG002 Q100 benchmark set (draft release `defrabbV0.019-20241113`). Instead of integrating variant callsets derived from read mapping, we align each Q100 haplotype directly to multiple reference genomes (GRCh37, GRCh38 and T2T-CHM13) and call variants with dipcall and PAV. The resulting truth calls are processed by DeFrABB—a transparent Snakemake workflow that iteratively masks assembly breaks, filters problematic repeat contexts, merges small and SV representations and produces harmonised VCF + BED packages for each reference [@defrabb2024]. This strategy allows confident characterisation of regions previously excluded by design, including long SDs with copy-number polymorphism, gene conversions in the MHC, and tandem repeats exceeding 10 kb [@zook2019; @krusche2019].
 
-The draft Q100 benchmark covers ≈ 90 % of the haploid genome for both small variants (2.74 Gbp) and SVs (2.76 Gbp), adding ~300 Mbp of difficult sequence relative to v4.2.1 [1,4]. It contains 3.64 M single-nucleotide variants (SNVs) and 0.86 M short indels—> 700 k more total small variants than v4.2.1—as well as ~30 k SVs, tripling the content of the previous v0.6 set [1]. Importantly, all confident regions and variants are provided in coordinate systems of GRCh37, GRCh38 and CHM13, facilitating benchmarking during the community transition toward reference pangenomes.
+The draft Q100 benchmark covers ≈ 90 % of the haploid genome for both small variants (2.74 Gbp) and SVs (2.76 Gbp), adding ~300 Mbp of difficult sequence relative to v4.2.1 [@zook2019; @krusche2019]. It contains 3.64 M single-nucleotide variants (SNVs) and 0.86 M short indels—> 700 k more total small variants than v4.2.1—as well as ~30 k SVs, tripling the content of the previous v0.6 set [@zook2019]. Importantly, all confident regions and variants are provided in coordinate systems of GRCh37, GRCh38 and CHM13, facilitating benchmarking during the community transition toward reference pangenomes.
 
 Here we describe the generation, validation and prospective utility of the HG002 Q100 assembly-based benchmark. We compare its content and genomic reach with earlier GIAB releases, demonstrate its ability to differentiate state-of-the-art variant callers in newly accessible contexts and discuss future extensions toward genome-centric benchmarking. By replacing reference-biased, mapping-derived truth sets with sequence-truth anchors, the Q100 benchmark establishes a new standard for comprehensive, clinically meaningful assessment of genomic analyses.
