--- a/manuscript/introduction.qmd
+++ b/manuscript/introduction.qmd
@@ -1,6 +1,6 @@
 ## Introduction  
 
-High-accuracy benchmark sets have been a cornerstone of the Genome in a Bottle (GIAB) Consortium since 2014, enabling objective evaluation and rapid improvement of sequencing technologies, alignment strategies and variant-calling pipelines. Successive releases—from the pilot NA12878 v2 small-variant benchmark through the current HG002 v4.2.1 and the companion v0.6 structural-variant (SV) benchmark—have driven community-wide gains in F1 scores that now approach 0.999 in the easiest regions of the genome [@zook2019]. Yet these “high-confidence” resources remain fundamentally limited by their reliance on short-read mapping to a single linear reference: ∼10–15 % of the human genome, including most centromeres, segmental duplications (SDs), large tandem repeats and complex immune loci, is omitted because reads cannot be uniquely aligned or variants cannot be represented unambiguously in the VCF format [@zook2019; @krusche2019]. As a result, benchmarking today provides little guidance on method performance in precisely the regions that are most polymorphic, medically relevant and challenging to analyse.
+High-accuracy benchmark sets are a cornerstone of the Genome in a Bottle (GIAB) Consortium since 2014, enabling objective evaluation and rapid advances in sequencing technologies and variant-calling pipelines. Successive releases—from the initial small-variant benchmark for the pilot HG001 (also known as NA12878) through the current HG002 v4.2.1 and the companion v0.6 structural-variant (SV) benchmark sets — have driven community-wide gains in F1 scores that now approach 0.999 in the easiest regions of the genome [@zook2019]. Yet these prior whole genome benchmark sets remain fundamentally limited by their reliance on short-read mapping to a single linear reference: ∼10–15 % of the human genome, including most centromeres, segmental duplications (SDs), large tandem repeats and complex immune loci, are excluded from the benchmark regions because reads cannot be confidently aligned and variants cannot be unambiguously represented [@zook2019; @krusche2019]. As a result, benchmarking today provides little guidance on method performance in precisely the regions that are most polymorphic, medically relevant and challenging.
 
 Recent technological advances now make it possible to transcend these constraints. Highly accurate long reads from Pacific Biosciences (HiFi; Q > 30) and ultra-long reads from Oxford Nanopore Technologies routinely produce assemblies exceeding Q70 consensus accuracy, while algorithmic breakthroughs such as Verkko and hifiasm enable phasing and telomere-to-telomere (T2T) completion of both haplotypes. The T2T Consortium’s CHM13 assembly showcased the feasibility of seamless human reference genomes, revealing eight per cent of sequence missing from GRCh38 and exposing pervasive reference bias in variant discovery. Building on these developments, a community effort has generated a nearly error-free, fully phased diploid assembly of the GIAB sample HG002—nicknamed “Q100” to reflect its aspirational base-level quality (QV = 100) [@english2025]. Version 1.1 of the Q100 assembly spans both sex chromosomes, resolves all centromeres except residual rDNA gaps and attains Merqury quality estimates above Q78, providing an unprecedented substrate for benchmarking [@english2025].
 
